# chainer2tflite

./: README.md
chainer2tflite/: __init__.py  convert_dropout.py  export.py  export_testcase.py  exporter.py  serialize_ops.py
chainer2tflite/testing/: test_data_set.py  test_tflite.py
examples/mnist/: CMakeLists.txt  README.md  bootstrap-cmake.sh  convert_mnist_model.py  mnist.cc  mnist.tflite
examples/python/: simple_relu.py
tests/: conftest.py  helper.py  test_activations.py  test_arrays.py  test_convolutions.py  test_depthwise_conv2d.py  test_images.py  test_math.py  test_normalizations.py  test_poolings.py  test_randoms.py
